fix nav-bar overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ a{
 }
 .header ul li{
   float: left;
-  padding: 30px 15px;
+  padding: 10px 15px;
   color: #ffdbe7;
   font-size: 15px;
   font-weight: bold;
